--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1,3 +1,7 @@
+body {
+  background-color: blue;
+}
+
 /*============================================================================
   Debut | Built with Shopify Slate
 
